--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <style>
+      .material-symbols-outlined {
+        font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 48;
+      }
+    </style>
     <!-- Above Adds Material Icons -->
 
     <title>Milk & Eggs</title>
