--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     </style>
     <!-- Above Adds Material Icons -->
 
-    <title>Milk & Eggs</title>
+    <title>Forgot Milk?</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
